force-app/main/default/objects/Invoice_Header__c/Invoice_Header__c.object-meta.xml
<CustomObject>
    <label>Invoice Header</label>
    <nameField>
        <label>Invoice Header Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>