force-app/main/default/objects/Invoice_Header__c/fields/BilledQuantity__c.field-meta.xml
<CustomField>
    <fullName>BilledQuantity__c</fullName>
    <label>BilledQuantity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>