force-app/main/default/objects/Invoice_Header__c/fields/Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Date__c</fullName>
    <label>Billing Date</label>
    <type>Date</type>
</CustomField>