force-app/main/default/objects/Invoice_Header__c/fields/BillingCategory__c.field-meta.xml
<CustomField>
    <fullName>BillingCategory__c</fullName>
    <label>Billing Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
            <value>
                <fullName>Value2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>