force-app/main/default/objects/Invoice_Header__c/fields/DeliveryDocItem__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDocItem__c</fullName>
    <label>DeliveryDocItem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>