force-app/main/default/objects/Invoice_Header__c/fields/DeliveryDocNumber__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDocNumber__c</fullName>
    <label>DeliveryDocNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>