force-app/main/default/objects/Invoice_Header__c/fields/External__c.field-meta.xml
<CustomField>
    <fullName>External__c</fullName>
    <externalId>true</externalId>
    <label>External</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>