force-app/main/default/objects/Invoice_Header__c/fields/ItemCost__c.field-meta.xml
<CustomField>
    <fullName>ItemCost__c</fullName>
    <label>ItemCost</label>
    <length>255</length>
    <type>Text</type>
</CustomField>