force-app/main/default/objects/Invoice_Header__c/fields/ItemNetValue__c.field-meta.xml
<CustomField>
    <fullName>ItemNetValue__c</fullName>
    <label>ItemNetValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>