force-app/main/default/objects/Invoice_Header__c/fields/ItemPricingDate__c.field-meta.xml
<CustomField>
    <fullName>ItemPricingDate__c</fullName>
    <label>ItemPricingDate</label>
    <type>Date</type>
</CustomField>