force-app/main/default/objects/Invoice_Header__c/fields/ItemTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>ItemTaxAmount__c</fullName>
    <label>ItemTaxAmount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>