force-app/main/default/objects/Invoice_Header__c/fields/NetValue__c.field-meta.xml
<CustomField>
    <fullName>NetValue__c</fullName>
    <label>NetValue</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>