force-app/main/default/objects/Invoice_Header__c/fields/NetVolume__c.field-meta.xml
<CustomField>
    <fullName>NetVolume__c</fullName>
    <label>NetVolume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>