force-app/main/default/objects/Invoice_Header__c/fields/NetWeight__c.field-meta.xml
<CustomField>
    <fullName>NetWeight__c</fullName>
    <label>NetWeight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>