force-app/main/default/objects/Invoice_Header__c/fields/SalesOrderItem__c.field-meta.xml
<CustomField>
    <fullName>SalesOrderItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SalesOrderItem</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Invoice Headers</relationshipLabel>
    <relationshipName>Invoice_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>