force-app/main/default/objects/Invoice_Header__c/fields/SalesOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>SalesOrderNumber__c</fullName>
    <label>SalesOrderNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>